login/signup/splash pages completed

--- a/react-app/src/components/LoginFormPage/LoginForm.css
+++ b/react-app/src/components/LoginFormPage/LoginForm.css
@@ -94,6 +94,11 @@ h2 {
     border: 1px solid #38b6ff;
 }
 
+.login-right li {
+    list-style: none;
+    color: red;
+}
+
 .login-button-demo {
     display: flex;
     justify-content: center;
