--- a/react-app/src/components/MarketsPage/MarketsPage.css
+++ b/react-app/src/components/MarketsPage/MarketsPage.css
@@ -6,8 +6,13 @@
 }
 
 .markets-container h4 {
+    margin: 5px 0 !important;
+}
+
+.markets-container h5 {
     margin: 0 !important;
-    padding: 7px;
+    font-weight: 300;
+    font-size: 8pt;
 }
 
 .three-col-container {
@@ -17,14 +22,42 @@
 }
 
 .index-box {
-    border: 1px solid lightgray;
+    border: 1px solid rgb(235, 235, 235);
     border-radius: 5px;
+    padding: 5px;
+    box-shadow: 0px 0px 5px rgba(56, 56, 56, 0.1);
+}
+
+.index-box-top {
+    display: flex;
+    justify-content: space-between;
+    padding: 7px;
+    padding-left: 7px;
+}
+
+.index-box-top-right {
+    padding-right: 5px;
+    text-align: right;
+}
+
+#index-positive {
+    color: green;
+}
+
+#index-negative {
+    color: red;
 }
 
 .list-container {
-    border: 1px solid lightgray;
+    border: 1px solid rgb(235, 235, 235);
     border-radius: 5px;
-    padding: 5px;
+    padding: 10px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+}
+
+.list-container h4 {
+    padding-left: 5px;
+    padding-bottom: 5px;
 }
 
 .list-header {
