--- a/react-app/src/components/MarketsPage/MarketsPage.css
+++ b/react-app/src/components/MarketsPage/MarketsPage.css
@@ -25,7 +25,7 @@
     border: 1px solid rgb(235, 235, 235);
     border-radius: 5px;
     padding: 5px;
-    box-shadow: 0px 0px 5px rgba(56, 56, 56, 0.1);
+    box-shadow: 0px 0px 20px rgba(107, 107, 107, 0.1);
 }
 
 .index-box-top {
@@ -40,11 +40,11 @@
     text-align: right;
 }
 
-#index-positive {
+#return-positive {
     color: green;
 }
 
-#index-negative {
+#return-negative {
     color: red;
 }
 
@@ -52,7 +52,7 @@
     border: 1px solid rgb(235, 235, 235);
     border-radius: 5px;
     padding: 10px;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 20px rgba(107, 107, 107, 0.1);
 }
 
 .list-container h4 {
@@ -71,7 +71,7 @@
     margin-bottom: 5px;
 }
 
-#list-right {
+.list-right {
     display: flex;
     justify-content: flex-end;
 }
