--- a/react-app/src/components/MarketsPage/MarketsPage.css
+++ b/react-app/src/components/MarketsPage/MarketsPage.css
@@ -15,6 +15,80 @@
     font-size: 8pt;
 }
 
+.searchbar-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding-bottom: 20px;
+}
+
+.searchbar-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    padding: 7px 10px;
+    background-color: white;
+    border-radius: 10px;
+    font-size: 14pt;
+    border: 1px solid lightgray;
+    width: 40%;
+}
+
+.searchbar-container:focus {
+    border: 2px solid #2081ff;
+}
+
+.searchbar-container input {
+    padding: 5px;
+    height: 25px;
+    font-size: 14pt;
+    border: 0;
+    width: 100%;
+}
+
+.searchbar-container input:focus {
+    border: 0 !important;
+    outline: none;
+}
+
+
+.search-results {
+    position: absolute;
+    margin-top: 50px;
+    z-index: 1000;
+    background-color: white;
+    border: 1px solid lightgray;
+
+
+    list-style: none;
+    padding: 0;
+    font-size: 10pt;
+    font-weight: 300;
+    width: 34%;
+}
+
+.search-results li {
+    display: flex;
+    justify-content: space-between;
+    padding: 8px;
+    border-bottom: 1px solid lightgray;
+    gap: 20px;
+}
+
+.search-results li:hover {
+    cursor: pointer;
+    background-color: #91d7ff;
+    font-weight: 500;
+    text-decoration: underline;
+}
+
+.hidden-search {
+    display: none !important;
+}
+
+
 .three-col-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
