markets & stock details pages completed

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -10,3 +10,11 @@
     font-family: 'Lato', sans-serif;
     text-decoration: none;
 }
+
+#return-positive {
+    color: green;
+}
+
+#return-negative {
+    color: red;
+}
