--- a/react-app/src/components/TradingPage/TradingPage.css
+++ b/react-app/src/components/TradingPage/TradingPage.css
@@ -21,7 +21,9 @@
 .trading-transaction-container {
     position: sticky;
     top: 160px;
-    border: 2px solid red;
+    border: 2px solid rgb(235, 235, 235);
+    background-color: rgb(235, 235, 235);
+    border-radius: 25px;
     height: 73vh;
 }
 
@@ -159,4 +161,76 @@
 .trading-info-stat-item h5 {
     margin: 0 !important;
     font-size: 11pt;
+}
+
+.transaction-top {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    height: 50px;
+    /* border-bottom: 2px solid #2081ff; */
+}
+
+.transaction-top button {
+    cursor: pointer;
+    background-color: transparent;
+    color:  #2081ff;
+    border: 0;
+    font-size: 14pt;
+    font-weight: 700;
+}
+
+.active-transaction {
+    background-color:  #2081ff !important;
+    color: white !important;
+}
+
+#buy-button {
+    border-top-left-radius: 25px;
+}
+
+#sell-button {
+    border-top-right-radius: 25px;
+}
+
+
+.transaction-content {
+    padding: 20px;
+    border-bottom: 1px solid lightgray;
+}
+
+.transaction-content div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.transaction-content input {
+    text-align: right;
+}
+
+.quantity-input {
+    border: 0;
+    background-color: white;
+    padding: 5px;
+    display: flex;
+    justify-content: flex-end;
+    border-radius: 5px;
+}
+
+.transaction-content select {
+    height: 25px;
+    padding: 5px;
+    border: 0;
+    border-radius: 5px;
+}
+
+.transaction-totals {
+    padding: 20px;
+}
+
+.transaction-totals div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
