--- a/react-app/src/components/TradingPage/TradingPage.css
+++ b/react-app/src/components/TradingPage/TradingPage.css
@@ -195,7 +195,7 @@
 
 
 .transaction-content {
-    padding: 20px;
+    padding: 20px 40px;
     border-bottom: 1px solid lightgray;
 }
 
@@ -225,12 +225,67 @@
     border-radius: 5px;
 }
 
+.tranche-info {
+    display: flex !important;
+    align-items: center !important;
+    flex-direction: column;
+    width: 100%;
+    padding-bottom: 12px;
+}
+
+.tranche-info div {
+    display: flex;
+    justify-content: space-between !important;
+    width: 100%;
+    /* gap: 10%; */
+    font-size: 10pt;
+    margin: 0 !important;
+}
+
+#tranche-info-right {
+    display: flex;
+    justify-content: flex-end !important;
+}
+
 .transaction-totals {
-    padding: 20px;
+    padding: 20px 40px;
+    border-bottom: 1px solid lightgray;
 }
 
 .transaction-totals div {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.transaction-bottom {
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.transaction-bottom button {
+    cursor: pointer;
+    width: 100%;
+    height: 60px;
+    border-radius: 11px !important;
+    border: 2px solid #2081ff !important;
+    background-color: #2081ff;
+    color: white;
+}
+
+.transaction-bottom button:hover {
+    background-color: #38b6ff;
+    border: 2px solid #38b6ff !important;
+}
+
+.transaction-bottom button:active {
+    border: none !important;
+}
+
+.transaction-bottom p {
+    color: red;
 }
