portfolio page reworked; watchlist styling started

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -18,3 +18,9 @@
 #return-negative {
     color: red;
 }
+
+#symbol-link:hover {
+    cursor: pointer;
+    color: #2081ff;
+    text-decoration: underline;
+}
