--- a/react-app/src/components/LoadingVid/loading.css
+++ b/react-app/src/components/LoadingVid/loading.css
@@ -2,12 +2,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100%;
+    min-width: 100%;
+    min-height: 100vh;
 }
 
 #loading-vid {
-    position: absolute;
+    position: relative;
     top: 0;
-    left: 0;
+    left: 15em;
     width: 100%;
     height: 100%;
     object-fit: cover;
