--- a/react-app/src/components/Portfolio/Portfolio.css
+++ b/react-app/src/components/Portfolio/Portfolio.css
@@ -3,6 +3,7 @@
     display: grid;
     grid-template-columns: 2fr 1fr;
     gap: 50px;
+    /* min-width: 100vh; */
 }
 
 .portfolio-left {
@@ -126,4 +127,3 @@
     justify-content: space-between;
     padding: 10px 5px;
 }
-
