--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -1,8 +1,15 @@
 
-.nav-container {
+.three-container {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
   /* width: 100%; */
+  padding: 30px 5%;
+  box-shadow: 0 2px 50px rgba(107, 107, 107, 0.1);
+}
+
+.two-container {
+  display: flex;
+  justify-content: space-between;
   padding: 30px 5%;
   box-shadow: 0 2px 50px rgba(107, 107, 107, 0.1);
 }
