--- a/react-app/src/components/TradingPage/TradingPage.css
+++ b/react-app/src/components/TradingPage/TradingPage.css
@@ -4,6 +4,7 @@
     display: flex;
     padding: 3% 15%;
     height: fit-content;
+    min-height: 100vh;
 }
 
 .trading-page-left {
@@ -39,7 +40,7 @@
 
 .trading-search-results {
     position: absolute;
-    z-index: 1000;
+    z-index: 1;
     background-color: white;
     border: 1px solid lightgray;
 
@@ -55,7 +56,7 @@
     display: flex;
     justify-content: space-between;
     padding: 8px;
-    /* border-bottom: 1px solid lightgray; */
+    border-bottom: 1px solid lightgray;
     gap: 25px;
 }
 
@@ -64,6 +65,10 @@
     background-color: #91d7ff;
     font-weight: 500;
     text-decoration: underline;
+}
+
+.hidden-search {
+    display: none !important;
 }
 
 .trading-info-top {
