--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -10,16 +10,21 @@
 .two-container {
   display: flex;
   justify-content: space-between;
-  padding: 30px 5%;
+  padding: 30px 10%;
   box-shadow: 0 2px 50px rgba(107, 107, 107, 0.1);
+}
+
+.nav-left {
+  display: flex;
+  gap: 10%;
 }
 
 .nav-mid {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   width: 100%;
-  gap: 6%;
+  gap: 10%;
   font-size: 13pt;
   font-weight: bold;
 }
