--- a/react-app/src/components/StockDetailsPage/StockDetailsPage.css
+++ b/react-app/src/components/StockDetailsPage/StockDetailsPage.css
@@ -126,6 +126,7 @@
 
 .details-top-content {
     display: flex;
+    /* justify-content: space-between; */
 }
 
 .info-graph-container {
@@ -140,7 +141,8 @@
 
 .info-top {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    /* justify-content: space-between; */
     gap: 15px;
     margin-top: 20px;
     width: 100%;
@@ -149,73 +151,122 @@
 .info-top h4 {
     margin: 0 !important;
     padding-bottom: 0 !important;
-    font-size: 20pt;
+    font-size: 28pt;
+    font-weight: 300;
+    color: white;
 }
 
 .info-top h5 {
     margin: 0 !important;
-    font-size: 12pt;
+    font-size: 14pt;
     font-weight: 300;
     padding-top: 5px;
+    color: white;
 }
 
 .stock-title {
     display: flex;
-    gap: 10px;
+    gap: 25px;
+    align-items: center;
+}
+
+.stock-title-right {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
 .stock-title h1 {
     margin: 0 !important;
-    font-size: 20pt;
+    font-size: 48pt;
+    font-weight: 300;
+    color: white;
 }
 
-.stock-title button {
+.details-buttons {
+    padding-top: 25px;
+    margin-bottom: 50px;
+    display: flex;
+    gap: 20px;
+    font-size: 20pt !important;
+}
+
+.details-buttons button {
     cursor: pointer;
     display: flex;
     align-items: center;
     gap: 5px;
-    padding: 5px 12px;
-    background-color: #2081ff;
-    border: 1px solid #2081ff;
-    border-radius: 50px;
+    padding: 10px 18px;
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 8px;
 }
 
-.stock-title button:hover {
-    background-color: #004aad;
-    border: 1px solid #004aad;
+.details-buttons button:hover {
+    background-color: #9edbff;
+    border: 1px solid #9edbff;
+    color: #9edbff !important;
 }
 
-.stock-title button i {
-    color: white !important;
+.details-buttons button i {
+    color: #2081ff !important;
+    font-size: 14pt;
 }
 
-.stock-title button span {
-    color: white !important;
+.details-buttons button span {
+    color: #2081ff !important;
+    font-size: 14pt;
 }
 
 #trade-button {
-    background-color: white;
-    border: 1px solid #2081ff;
+    background-color: transparent;
+    border: 1px solid white;
 }
 
 #trade-button:hover {
     background-color: #9edbff;
+    border: 1px solid #9edbff;
 }
 
 #trade-button i {
-    color: #2081ff !important;
+    color: white !important;
 }
 
 #trade-button span {
-    color: #2081ff !important;
+    color: white !important;
 }
 
-.stock-return {
+.stock-sector {
+    font-size: 10pt;
+    font-weight: 300;
+    color: white;
+}
+
+.details-return {
     display: flex;
-    flex-direction: column;
-    /* justify-content: flex-end; */
+    justify-content: flex-start;
     align-items: flex-end;
+    gap: 5px;
     font-size: 14pt;
+}
+
+#details-price {
+    font-size: 28pt;
+    font-weight: 300;
+    color: white;
+}
+
+#detail-positive {
+    color: rgb(0, 255, 0);
+}
+
+#detail-negative {
+    color: red
+}
+
+.details-return-percent {
+    font-weight: 300;
+    padding-bottom: 4px;
 }
 
 .info-stats {
