--- a/react-app/src/components/StockDetailsPage/StockDetailsPage.css
+++ b/react-app/src/components/StockDetailsPage/StockDetailsPage.css
@@ -92,7 +92,7 @@
 
 .details-search-results {
     position: absolute;
-    margin-top: 40px;
+    margin-top: 42.5px;
     z-index: 1000;
     background-color: white;
     border: 1px solid lightgray;
@@ -102,7 +102,7 @@
     padding: 0;
     font-size: 10pt;
     font-weight: 300;
-    width: auto;
+    width: 28%;
 }
 
 .details-search-results li {
@@ -111,13 +111,14 @@
     padding: 8px;
     border-bottom: 1px solid lightgray;
     gap: 20px;
+    /* width: 100%; */
 }
 
 .details-search-results li:hover {
     cursor: pointer;
     background-color: #91d7ff;
     font-weight: 500;
-    text-decoration: underline;
+    /* text-decoration: underline; */
 }
 
 .hidden-search {
