--- a/react-app/src/components/StockDetailsPage/StockDetailsPage.css
+++ b/react-app/src/components/StockDetailsPage/StockDetailsPage.css
@@ -134,7 +134,7 @@
     display: flex;
     flex-direction: column;
     /* justify-content: space-between; */
-    gap: 15px;
+    gap: 20px;
     margin-top: 20px;
     width: 100%;
 }
@@ -171,6 +171,22 @@
     margin: 0 !important;
     font-size: 48pt;
     font-weight: 300;
+    color: white;
+}
+
+.return-warning {
+    color: white;
+    font-size: 8pt;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.fa-circle-info {
+    color: white;
+}
+
+.return-warning span {
     color: white;
 }
 
