--- a/react-app/src/components/StockDetailsPage/StockDetailsPage.css
+++ b/react-app/src/components/StockDetailsPage/StockDetailsPage.css
@@ -249,6 +249,12 @@
     color: white;
 }
 
+.details-price-return {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+}
+
 .details-return {
     display: flex;
     justify-content: flex-start;
@@ -322,6 +328,7 @@
     width: 80%;
     margin: 25px 0;
     margin-top: 40px;
+    margin-bottom: 80px;
 }
 
 .graph-container {
@@ -354,6 +361,12 @@
 
 .graph-buttons button:hover {
     color: #2081ff;
+}
+
+.graph-buttons button:disabled {
+    cursor: not-allowed;
+    background-color: #aaa;
+    color: #555;
 }
 
 .active-timeframe {
