--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -1,8 +1,8 @@
 
 .three-container {
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
-  /* width: 100%; */
+  grid-template-columns: 1fr 7fr 2fr;
+  width: 100%;
   padding: 30px 5%;
   box-shadow: 0 2px 50px rgba(107, 107, 107, 0.1);
 }
@@ -16,15 +16,16 @@
 
 .nav-left {
   display: flex;
-  gap: 10%;
+  gap: 20px;
+  width: fit-content;
 }
 
 .nav-mid {
   display: flex;
-  /* justify-content: center; */
+  justify-content: flex-start;
   align-items: center;
-  width: 100%;
-  gap: 10%;
+  /* width: 100%; */
+  gap: 30px;
   font-size: 13pt;
   font-weight: bold;
 }
@@ -43,7 +44,7 @@
   justify-content: flex-end;
   align-items: center;
   gap: 15px;
-  width: 100%;
+  width: fit-content;
 }
 
 .nav-button {
