--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -10,8 +10,15 @@
 .two-container {
   display: flex;
   justify-content: space-between;
-  padding: 30px 10%;
+  padding: 30px 5%;
+
   box-shadow: 0 2px 50px rgba(107, 107, 107, 0.1);
+
+  position: fixed;
+  top: 0;
+  width: 90%;
+  background-color: rgba(255, 255, 255, 0);
+  z-index: 1000;
 }
 
 .nav-left {
@@ -45,6 +52,7 @@
   align-items: center;
   gap: 15px;
   width: fit-content;
+  z-index: 5000;
 }
 
 .nav-button {
