--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -1,25 +1,43 @@
 /* SplashPage.css */
 
-.video-container {
+/* .video-container {
     position: relative;
     width: 100%;
-    height: 100vh; /* Ensure the video container takes up the full viewport height */
+    height: 100vh;
     overflow: hidden;
-}
+} */
 
-#video-background {
+/* #video-background {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
+} */
+
+.splash-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background-image: url('background-top.png');
+    background-size: cover;
+}
+
+.splash-top {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    padding: 40px 10%;
+    padding-right: 15%;
+    min-height: 100vh;
+}
+
+.splash-top video {
+    width: 100%
 }
 
 .content {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     display: flex;
