--- a/react-app/src/components/TradingPage/TradingSplash.css
+++ b/react-app/src/components/TradingPage/TradingSplash.css
@@ -2,20 +2,31 @@
 .trading-splash-container {
     position: relative;
     width: 100%;
-    height: 90vh;
+    min-height: 100vh;
     overflow: hidden;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     justify-content: center;
     align-items: center;
+    /* padding: 100px 5%; */
 }
 
 #trading-video-background {
+    width: 100%;
+}
+
+.video-container {
+    position: relative;
+}
+
+.video-gradient {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 40%;
     height: 100%;
-    object-fit: cover;
+    background: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
+    z-index: 1;
 }
 
 .searchbar-div {
