--- a/react-app/src/components/TradingPage/TradingSplash.css
+++ b/react-app/src/components/TradingPage/TradingSplash.css
@@ -5,10 +5,34 @@
     min-height: 100vh;
     overflow: hidden;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 2fr 3fr;
     justify-content: center;
     align-items: center;
     /* padding: 100px 5%; */
+}
+
+.trading-splash-left {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.trading-splash-header {
+    padding-left: 15%;
+}
+
+.trading-splash-header h2 {
+    font-size: 40pt;
+    color: #00357a;
+    margin: 0 !important;
+}
+
+.trading-splash-header h3 {
+    font-size: 20pt;
+    font-weight: 300;
+    color: #00357a;
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
 }
 
 #trading-video-background {
@@ -23,7 +47,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 40%;
+    width: 50%;
     height: 100%;
     background: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
     z-index: 1;
@@ -33,7 +57,8 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
+    /* align-items: center; */
+    padding-left: 15%;
     z-index: 5000;
 }
 
