--- a/react-app/src/components/StockDetailsPage/StockDetailsPage.css
+++ b/react-app/src/components/StockDetailsPage/StockDetailsPage.css
@@ -30,6 +30,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    padding-top: 110px;
 }
 
 .details-top-inner {
